--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "sharp": "^0.34.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
